--- a/ffaefu/views/status.ejs
+++ b/ffaefu/views/status.ejs
@@ -36,7 +36,7 @@
       <li>スタイル: <%= job.name %></li>
       <li>スタイルレベル: <%= user.jobLevel %> </li>
       <li>スタミナ: <x id="stamina"><%= stamina %></x></li>
-      <li>武器 <%=weapon.name %> 威力: <%= weapon.attack %></li>
+      <li>武器 <%=weapon.name %> 威力: <%= weapon.attack() %></li>
       <li>防具 <%=armor.name %> 防御力: <%= armor.defence %></li>
       <li>装飾品 <%=accessory.name %></li>
     </ul>
