--- a/ffaefu/views/changeStatus.ejs
+++ b/ffaefu/views/changeStatus.ejs
@@ -46,8 +46,8 @@
       <li>装飾品 <%=accessory.name %></li>
       
     </ul>
-    <a href="/status"><button>ステータス画面へ</button></a>    
-    <a href="changeArts"><button>戦術を変更する</button></a>
+    <a href="/status"><button class="btn-square">ステータス画面へ</button></a>    
+    <a href="changeArts"><button class="btn-square">戦術を変更する</button></a>
     </div>
     </div>
   </body>
