--- a/ffaefu/views/changeArts.ejs
+++ b/ffaefu/views/changeArts.ejs
@@ -28,13 +28,8 @@
       <% }%>
 
       
-
-    <a href="/status"><button>ステータス画面へ</button></a>
-    <a href="/bank"><button>銀行へ</button></a>
-    <a href="/weaponShop"><button>武器屋へ</button></a>
-    <a href="/armorShop"><button>防具屋へ</button></a>
-    <a href="/accessoryShop"><button>装飾品屋へ</button></a>
-    <a href="/toolShop"><button>道具屋へ</button></a> 
+      <br><br>
+      <a href="/status"><button class="btn-square">ステータス画面へ</button></a>
     </div>
   </body>
 </html>
