--- a/ffaefu/views/changeJob.ejs
+++ b/ffaefu/views/changeJob.ejs
@@ -43,12 +43,13 @@
         <%= jobElement.name %>に転職しました．
         <% } %>
 
-    <a href="/status"><button>ステータス画面へ</button></a>
-    <a href="/bank"><button>銀行へ</button></a>
-    <a href="/weaponShop"><button>武器屋へ</button></a>
-    <a href="/armorShop"><button>防具屋へ</button></a>
-    <a href="/accessoryShop"><button>装飾品屋へ</button></a>
-    <a href="/toolShop"><button>道具屋へ</button></a> 
+        <br><br>
+        <a href="/status"><button class="btn-square">ステータス画面へ</button></a>
+        <a href="/bank"><button class="btn-square">銀行へ</button></a>
+        <a href="/weaponShop"><button class="btn-square">武器屋へ</button></a>
+        <a href="/armorShop"><button class="btn-square">防具屋へ</button></a>
+        <a href="/accessoryShop"><button class="btn-square">装飾品屋へ</button></a>
+        <a href="/toolShop"><button class="btn-square">道具屋へ</button></a>  
     </div>
   </body>
 </html>
