全体向けメッセージの実装

--- a/ffaefu/views/status.ejs
+++ b/ffaefu/views/status.ejs
@@ -111,5 +111,10 @@
       </form>
     </div>
     </div>
+
+    全体向けメッセージ：<br>
+    <%worldMessage.forEach((element)=>{%>
+      <%= element %>
+    <%})%>
   </body>
 </html>
