--- a/ffaefu/views/status.ejs
+++ b/ffaefu/views/status.ejs
@@ -105,16 +105,16 @@
       </form>
     </div>
     <div>
-      ポータル
-      <form action="" method="post">
-        <button type="submit" class="btn-square">修練場へ挑む</button>
-      </form>
-    </div>
-    </div>
 
     全体向けメッセージ：<br>
-    <%worldMessage.forEach((element)=>{%>
-      <%= element %>
-    <%})%>
+    <%if(worldMessage.length != 0){ %>
+      <ul>
+      <%worldMessage.forEach((element)=>{%>
+       <li><%= element %></li>
+      <%})%>
+       </ul>
+    <%}else{%>
+      ありません
+    <%}%>
   </body>
 </html>
